@@ -26,12 +26,12 @@ LIBSRC= bio_lib.c bio_cb.c $(ERRC).c \
 	bss_mem.c bss_null.c bss_fd.c \
 	bss_file.c bss_sock.c bss_conn.c \
 	bf_null.c bf_buff.c b_print.c b_dump.c \
-	b_sock.c bss_acpt.c bf_nbio.c
+	b_sock.c bss_acpt.c bf_nbio.c bss_log.c
 LIBOBJ= bio_lib.o bio_cb.o $(ERRC).o \
 	bss_mem.o bss_null.o bss_fd.o \
 	bss_file.o bss_sock.o bss_conn.o \
 	bf_null.o bf_buff.o b_print.o b_dump.o \
-	b_sock.o bss_acpt.o bf_nbio.o
+	b_sock.o bss_acpt.o bf_nbio.o bss_log.o
 
 SRC= $(LIBSRC)
 
