@@ -508,6 +508,7 @@ BIO_METHOD *BIO_s_socket(void);
 BIO_METHOD *BIO_s_connect(void);
 BIO_METHOD *BIO_s_accept(void);
 BIO_METHOD *BIO_s_fd(void);
+BIO_METHOD *BIO_s_log(void);
 BIO_METHOD *BIO_s_null(void);
 BIO_METHOD *BIO_f_null(void);
 BIO_METHOD *BIO_f_buffer(void);
@@ -574,6 +575,7 @@ BIO_METHOD *BIO_s_socket();
 BIO_METHOD *BIO_s_connect();
 BIO_METHOD *BIO_s_accept();
 BIO_METHOD *BIO_s_fd();
+BIO_METHOD *BIO_s_log();
 BIO_METHOD *BIO_s_null();
 BIO_METHOD *BIO_f_null();
 BIO_METHOD *BIO_f_buffer();
